<resources>
    <string name="app_name">MoviesOT</string>
    <string name="startScreenTitle">INFORME SUA CONTA DE  E-MAIL</string>
    <string name="bt_next">AVANÇAR</string>
    <string name="email">E-mail</string>
    <string name="inform_password">INFORME SUA SENHA</string>
    <string name="password">Senha</string>
    <string name="text_login">ENTRAR</string>
    <string name="example_email">example@gmail.com</string>
    <string name="lost_password">Esqueceu sua senha?</string>
    <string name="create_new_account">CRIE SUA NOVA  CONTA</string>
    <string name="complete_name">Nome completo</string>
    <string name="user_name">Nome de usuário</string>
    <string name="email_token_message">PARA SUA SEGURANÇA, INFORME O CÓDIGO ENVIADO PARA O SEU E-MAIL:</string>
    <string name="didnt_receive_the_code">Não recebeu o código? Enviar novamente</string>
    <string name="send_again">Enviar novamente</string>
    <string name="token">Código</string>
    <string name="pending_register_message">IDENTIFICAMOS QUE VOCÊ JÁ INICIOU UM CADASTRO, PARA CONCLUIRMOS, INFORME O CÓDIGO ENVIADO PARA O  SEU E-MAIL:</string>
    <string name="confirmInformation">CONFIRME AS INFORMAÇÕES DE SUA CONTA</string>
    <string name="create_new_password">CRIE SUA NOVA  SENHA</string>
    <string name="validation_token">Token de validação</string>
    <string name="newPassword">Nova Senha</string>
    <string name="confirm_newPassword">Confirme sua senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_accept">Aceitar</string>
    <string name="action_dimiss">Cancelar</string>
    <string name="label_alert_dialog">Este filme irá ser adicionado aos já vistos</string>
    <string name="label_description_dialog">Insira uma nota para ele</string>
</resources>
