<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/rootView_lastForgot_screen"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/defaultBackground"
tools:context=".forgotPassword.newPasswordScreen.NewPasswordActivity">

<include layout="@layout/top_goback_bar"/>

<ScrollView
    android:id="@+id/sv_lastForgot_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:background="@color/defaultBackground">

        <TextView
            android:id="@+id/tv_title_newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/dosis_bold"
            android:gravity="top|center_horizontal"
            android:text="@string/email_token_message"
            android:textSize="@dimen/small_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_forgotEmailAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/example_email"
            android:textColor="@color/redAlertDefault"
            android:textStyle="bold"
            android:textSize="@dimen/default_textSize"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin">

            <EditText
                android:id="@+id/et_forgot_complete_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:hint="@string/validation_token"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/greyDarker" />

            <TextView
                android:id="@+id/tv_didnt_receive_the_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didnt_receive_the_code"
                android:textSize="@dimen/default_textSize"
                android:layout_marginTop="5dp"
                android:textColorHighlight="@color/white"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="@dimen/default_margin">

            <TextView
                android:id="@+id/tv_newPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis_bold"
                android:gravity="top|center_horizontal"
                android:text="@string/create_new_password"
                android:layout_marginBottom="15dp"
                android:textSize="@dimen/small_title"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_forgot_user_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/border"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/greyDarker" />

            <EditText
                android:id="@+id/et_forgot_newPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:hint="@string/confirm_newPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/greyDarker" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_bt_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/behind_the_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shadow" />

            <Button
                android:id="@+id/bt_next_forgot_newPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="-60dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/dosis_bold"
                android:stateListAnimator="@null"
                android:text="@string/bt_next"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

</LinearLayout>