<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/defaultBackground"
    tools:context=".login.startScreen.StartActivity">

    <include layout="@layout/top_goback_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:background="@color/defaultBackground"

        >

        <TextView
            android:id="@+id/tv_title_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dosis_bold"
            android:gravity="top"
            android:text="@string/inform_password"
            android:textSize="@dimen/title"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_example_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/example_email"
                android:textSize="@dimen/default_textSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText"
                android:padding="10dp"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:textColor="@color/greyDarker"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_lost_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/lost_password"
                android:textSize="@dimen/default_textSize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">



            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/behind_the_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shadow" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="-60dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/dosis_bold"
                android:stateListAnimator="@null"
                android:text="@string/text_login"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>