<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView_newUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/defaultBackground"
    tools:context=".register.newUserScreen.NewUserActivity">

    <include layout="@layout/top_goback_bar"/>

    <ScrollView
        android:id="@+id/sv_newUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:background="@color/defaultBackground">

            <TextView
                android:id="@+id/tv_title_newUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/dosis_bold"
                android:gravity="top|center_horizontal"
                android:text="@string/create_new_account"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_subTitle_newUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/example_email"
                android:textSize="@dimen/sub_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:focusableInTouchMode="true"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_new_complete_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/border"
                    android:hint="@string/complete_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/greyDarker" />

                <EditText
                    android:id="@+id/et_new_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="17dp"
                    android:background="@drawable/border"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/greyDarker" />

                <EditText
                    android:id="@+id/et_new_passWord"
                    android:padding="10dp"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:textColor="@color/greyDarker"
                    android:layout_height="50dp"
                    android:background="@drawable/border"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/l_bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/behind_the_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/shadow" />

                <Button
                    android:id="@+id/bt_next_new_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-60dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/dosis_bold"
                    android:stateListAnimator="@null"
                    android:text="@string/bt_next"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>