<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView_newUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/defaultBackground"
    tools:context=".register.pendingRegisterScreen.PendingRegisterActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:background="@color/defaultBackground">

            <TextView
                android:id="@+id/tv_title_pending_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis_bold"
                android:gravity="top|center_horizontal"
                android:text="@string/pending_register_message"
                android:textSize="@dimen/small_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_subTitle_pending_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/example_email"
                android:textColor="@color/redAlertDefault"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_pending_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:hint="@string/token"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/greyDarker" />

            <TextView
                android:id="@+id/tv_didnt_receive_the_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/didnt_receive_the_code"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/default_margin"
                android:textColorHighlight="@color/white"/>

            <LinearLayout
                android:id="@+id/l_bt_pending_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/behind_the_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/shadow" />

                <Button
                    android:id="@+id/bt_next_pending_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-60dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/dosis_bold"
                    android:stateListAnimator="@null"
                    android:text="@string/bt_next"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>