<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/defaultBackground"
    tools:context=".login.startScreen.StartActivity">

    <include layout="@layout/top_goback_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:background="@color/defaultBackground"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/startScreenTitle"
            android:textSize="@dimen/title"
            android:fontFamily="@font/dosis_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:focusableInTouchMode="true"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_start"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textColor="@color/greyDarker"
                android:background="@drawable/border"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="bottom">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/behind_the_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shadow"
                />

            <Button
                android:id="@+id/bt_next_start"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="-60dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/dosis_bold"
                android:stateListAnimator="@null"
                android:text="@string/bt_next"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>